# passion-project-change_detection_satellite_imageries

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  environment.yml  main.py  poetry.toml  pyproject.toml  requirements.txt
change_detection_cli/: __init__.py
data/processed/artifacts/: metrics.csv
data/processed/artifacts/predictions/: change_map.tif
data/raw/: README.md
notebooks/: OSCD_Preprocessing_Mumbai_AbuDhabi_13_channels.ipynb
src/: __init__.py  config.py  gpu.py  main.py
src/data/processed/: README.md
src/data/raw/: README.md  onera-satellite-change-detection-dataset  onera-satellite-change-detection-dataset_(1)
src/feature_engineering/: build_features.py
src/models/: UCDNET.py  __init__.py  losses.py  metrics.py  predict_model.py  train_model.py  ucdnet_architecture.py
src/preprocessing_data/: oscd_loader.py  pre-processing.py
src/visualization/: visualize.py
streamlit_app/: README.md  app.py  requirements_streamlit.txt
streamlit_app/components/: band_selector.py  map_viewer.py  metrics_card.py  sidebar.py
streamlit_app/pages/: 1_Dashboard.py  2_Upload_Images.py  3_Run_Detection.py  4_Results.py  5_Train_Model.py
streamlit_app/utils/: helpers.py
