[tool.poetry]
name = "change-detection-satellite-imageries"
version = "1.0.0"
description = "Urban change detection from bi-temporal Sentinel-2 imagery (UCDNet)"
authors = ["Sabudh"]
readme = "README.md"
license = "MIT"
packages = [{ include = "change_detection_cli" }]

# Use the active Conda env (see poetry.toml: virtualenvs.create = false).
# After: conda env create -f environment.yml && conda activate change-detection
#        poetry lock && poetry install

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
tensorflow = "==2.15.0"
numpy = ">=1.23.0,<2.0.0"
matplotlib = ">=3.7.0"
rasterio = ">=1.3.0"
Pillow = ">=9.0.0"
scikit-learn = ">=1.2.0"
tqdm = ">=4.65.0"
python-dotenv = ">=0.5.1"
click = ">=8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
flake8 = ">=6.0.0"
coverage = ">=7.0.0"

[tool.poetry.scripts]
ucdnet = "change_detection_cli:main"
change-detection = "change_detection_cli:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
